--- a/pom.xml
+++ b/pom.xml
@@ -44,20 +44,10 @@
             <artifactId>rest-client</artifactId>
             <version>5.0.5</version>
         </dependency>
-		<!--
-		So far, I couldn't figure out how to include any version of Jackson
-		as an HPI dependency for Jenkins version 2.60.2. Until this is figured out,
-		include these libs like this.
-		-->
+        <!-- Other Jenkins plugins that we depend on. -->
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>jackson2-api</artifactId>
-            <version>${jackson.version}</version>
-        </dependency>
-		<!-- Needed for YAML serialization. -->
-        <dependency>
-            <groupId>com.fasterxml.jackson.dataformat</groupId>
-            <artifactId>jackson-dataformat-yaml</artifactId>
             <version>${jackson.version}</version>
         </dependency>
         <dependency>
@@ -65,21 +55,23 @@
             <artifactId>credentials</artifactId>
             <version>${credentials.version}</version>
         </dependency>
+        <!--
+        Other artifacts, which will be packaged with us.
+        -->
+		<!-- Needed for YAML serialization. -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-yaml</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
 		<!--
-        Runtime dependencies. We ship with the latest version of Jersey that 
-		supported by Jenkins' POM.
+        Runtime dependencies. We ship with Jersey as a REST client.
         -->
         <dependency>
             <groupId>org.glassfish.jersey.core</groupId>
             <artifactId>jersey-client</artifactId>
             <version>${jersey.version}</version>
             <scope>runtime</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>jakarta.ws.rs</groupId>
-                    <artifactId>jakarta.ws.rs-api</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.glassfish.jersey.inject</groupId>
@@ -92,12 +84,6 @@
             <artifactId>jersey-media-json-jackson</artifactId>
             <version>${jersey.version}</version>
             <scope>runtime</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>jakarta.ws.rs</groupId>
-                    <artifactId>jakarta.ws.rs-api</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.glassfish</groupId>
