--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
         <artifactId>plugin</artifactId>
         <version>3.57</version>
     </parent>
+    <groupId>io.jenkins.plugins</groupId>
     <artifactId>cloudify</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>hpi</packaging>
