--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
         <jersey.version>2.31</jersey.version>
         <jackson.version>2.11.0</jackson.version>
         <credentials.version>2.3.7</credentials.version>
+        <azure-credentials.version>4.0.2</azure-credentials.version>
+        <azure-commons.version>1.0.4</azure-commons.version>
     </properties>
     <name>Cloudify</name>
     <licenses>
@@ -63,6 +65,21 @@
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-yaml</artifactId>
             <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jenkins-ci.plugins</groupId>
+            <artifactId>azure-credentials</artifactId>
+            <version>${azure-credentials.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jenkins-ci.plugins</groupId>
+            <artifactId>azure-commons-core</artifactId>
+            <version>${azure-commons.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jenkins-ci.plugins</groupId>
+            <artifactId>aws-credentials</artifactId>
+            <version>1.28</version>
         </dependency>
 		<!--
         Runtime dependencies. We ship with Jersey as a REST client.
@@ -118,6 +135,11 @@
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-annotations</artifactId>
                 <version>2.11.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpclient</artifactId>
+                <version>4.5.3</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -197,8 +219,6 @@
                 <activeByDefault>false</activeByDefault>
             </activation>
             <properties>
-                <azure-credentials.version>4.0.2</azure-credentials.version>
-                <azure-commons.version>1.0.4</azure-commons.version>
                 <git.version>3.9.4</git.version>
             </properties>
             <dependencies>
@@ -225,21 +245,6 @@
                     <groupId>jp.ikedam.jenkins.plugins</groupId>
                     <artifactId>extensible-choice-parameter</artifactId>
                     <version>1.6.0</version>
-                </dependency>
-                <dependency>
-                    <groupId>org.jenkins-ci.plugins</groupId>
-                    <artifactId>azure-credentials</artifactId>
-                    <version>${azure-credentials.version}</version>
-                </dependency>
-                <dependency>
-                    <groupId>org.jenkins-ci.plugins</groupId>
-                    <artifactId>azure-commons-core</artifactId>
-                    <version>${azure-commons.version}</version>
-                </dependency>
-                <dependency>
-                    <groupId>org.jenkins-ci.plugins</groupId>
-                    <artifactId>aws-credentials</artifactId>
-                    <version>1.28</version>
                 </dependency>
             </dependencies>
             <dependencyManagement>
