--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>hpi</packaging>
     <properties>
-        <jenkins.version>2.222.4</jenkins.version>
+        <jenkins.version>2.222</jenkins.version>
         <java.level>8</java.level>
         <slf4jVersion>1.7.30</slf4jVersion>
         <jersey.version>2.31</jersey.version>
@@ -20,6 +20,7 @@
         <credentials.version>2.3.7</credentials.version>
         <azure-credentials.version>4.0.2</azure-credentials.version>
         <azure-commons.version>1.0.4</azure-commons.version>
+        <aws-credentials.version>1.28</aws-credentials.version>
     </properties>
     <name>Cloudify</name>
     <licenses>
@@ -79,7 +80,7 @@
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>aws-credentials</artifactId>
-            <version>1.28</version>
+            <version>${aws-credentials.version}</version>
         </dependency>
 		<!--
         Runtime dependencies. We ship with Jersey as a REST client.
@@ -140,6 +141,36 @@
                 <groupId>org.apache.httpcomponents</groupId>
                 <artifactId>httpclient</artifactId>
                 <version>4.5.3</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpcore</artifactId>
+                <version>4.4.6</version>
+            </dependency>
+            <dependency>
+                <groupId>joda-time</groupId>
+                <artifactId>joda-time</artifactId>
+                <version>2.9.9</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jenkins-ci.plugins</groupId>
+                <artifactId>credentials-binding</artifactId>
+                <version>1.16</version>
+            </dependency>
+            <dependency>
+                <groupId>com.squareup.retrofit2</groupId>
+                <artifactId>retrofit</artifactId>
+                <version>2.6.2</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jenkins-ci.plugins.workflow</groupId>
+                <artifactId>workflow-step-api</artifactId>
+                <version>2.22</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jenkins-ci.plugins</groupId>
+                <artifactId>script-security</artifactId>
+                <version>1.73</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -263,24 +294,9 @@
                         <version>1.12</version>
                     </dependency>
                     <dependency>
-                        <groupId>joda-time</groupId>
-                        <artifactId>joda-time</artifactId>
-                        <version>2.9.9</version>
-                    </dependency>
-                    <dependency>
                         <groupId>com.jcraft</groupId>
                         <artifactId>jsch</artifactId>
                         <version>0.1.54</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.apache.httpcomponents</groupId>
-                        <artifactId>httpcore</artifactId>
-                        <version>4.4.6</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>com.squareup.retrofit2</groupId>
-                        <artifactId>retrofit</artifactId>
-                        <version>2.6.2</version>
                     </dependency>
                     <dependency>
                         <groupId>com.squareup.okhttp3</groupId>
@@ -296,16 +312,6 @@
                         <groupId>org.jenkins-ci.plugins</groupId>
                         <artifactId>structs</artifactId>
                         <version>1.20</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.jenkins-ci.plugins</groupId>
-                        <artifactId>credentials</artifactId>
-                        <version>2.1.18</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.jenkins-ci.plugins</groupId>
-                        <artifactId>credentials-binding</artifactId>
-                        <version>1.16</version>
                     </dependency>
                 </dependencies>
             </dependencyManagement>
