--- a/pom.xml
+++ b/pom.xml
@@ -313,6 +313,11 @@
                         <artifactId>structs</artifactId>
                         <version>1.20</version>
                     </dependency>
+                    <dependency>
+                        <groupId>org.jenkins-ci.plugins</groupId>
+                        <artifactId>cloudbees-folder</artifactId>
+                        <version>6.14</version>
+                    </dependency>
                 </dependencies>
             </dependencyManagement>
         </profile>
