--- a/pom.xml
+++ b/pom.xml
@@ -37,9 +37,9 @@
         </developer>
     </developers>
     <scm>
-        <connection>https://github.com/cloudify-cosmo/cloudify-jenkins-plugin.git</connection>
-        <developerConnection>https://github.com/cloudify-cosmo/cloudify-jenkins-plugin.git</developerConnection>
-        <url>https://github.com/cloudify-cosmo/cloudify-jenkins-plugin</url>
+        <connection>https://github.com/jenkinsci/cloudify-plugin.git</connection>
+        <developerConnection>scm:git:https://github.com/jenkinsci/cloudify-plugin.git</developerConnection>
+        <url>https://github.com/jenkinsci/cloudify-plugin.git</url>
     </scm>
     <dependencies>
         <dependency>
