--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     </parent>
     <groupId>io.jenkins.plugins</groupId>
     <artifactId>cloudify</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>hpi</packaging>
     <properties>
         <jenkins.version>2.222</jenkins.version>
@@ -39,7 +39,7 @@
         <connection>https://github.com/jenkinsci/cloudify-plugin.git</connection>
         <developerConnection>scm:git:https://github.com/jenkinsci/cloudify-plugin.git</developerConnection>
         <url>https://github.com/jenkinsci/cloudify-plugin.git</url>
-      <tag>HEAD</tag>
+      <tag>cloudify-1.0</tag>
   </scm>
     <dependencies>
         <dependency>
