--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
 		<url>https://github.com/jenkinsci/cloudify-plugin.git</url>
 		<tag>HEAD</tag>
 	</scm>
-	<url>https://github.com/jenkinsci/cloudify-plugin</url>
+	<url>https://github.com/jenkinsci/${project.artifactId}/tree/${project.artifactId}-${revision}</url>
 	<dependencies>
 		<dependency>
 			<groupId>co.cloudify</groupId>
