--- a/src/main/resources/blueprints/k8s/blueprint.yaml
+++ b/src/main/resources/blueprints/k8s/blueprint.yaml
@@ -26,6 +26,6 @@ node_templates:
       validate_resource_status: { get_input: validate_status }
       allow_node_redefinition: { get_input: allow_node_redefinition }
 
-outputs:
+capabilities:
   kubernetes:
     value: { get_attribute: [ resource, kubernetes ] }
