Kubernetes fixes & additions

--- a/src/main/resources/blueprints/k8s/blueprint.yaml
+++ b/src/main/resources/blueprints/k8s/blueprint.yaml
@@ -6,9 +6,9 @@ imports:
 
 inputs:
   client_config:
-    type: dict
+    type: cloudify.kubernetes.types.ClientConfig
   definition:
-    type: dict
+    type: cloudify.kubernetes.types.ResourceDefinition
   options:
     type: dict
   validate_status:
