--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.jenkins-ci.plugins</groupId>
@@ -9,7 +8,7 @@
 	</parent>
 	<groupId>io.jenkins.plugins</groupId>
 	<artifactId>cloudify</artifactId>
-	<version>1.0.5-SNAPSHOT</version>
+	<version>1.0.5</version>
 	<packaging>hpi</packaging>
 	<properties>
 		<jenkins.version>2.222.4</jenkins.version>
@@ -40,7 +39,7 @@
 		<connection>https://github.com/jenkinsci/cloudify-plugin.git</connection>
 		<developerConnection>scm:git:https://github.com/jenkinsci/cloudify-plugin.git</developerConnection>
 		<url>https://github.com/jenkinsci/cloudify-plugin.git</url>
-		<tag>HEAD</tag>
+		<tag>cloudify-1.0.5</tag>
 	</scm>
 	<url>https://github.com/jenkinsci/cloudify-plugin/tree/${project.artifactId}-${project.version}</url>
 	<dependencies>
