Cosmetic changes to blueprints

--- a/src/main/resources/blueprints/arm/blueprint.yaml
+++ b/src/main/resources/blueprints/arm/blueprint.yaml
@@ -43,6 +43,6 @@ node_templates:
       template_file: { get_input: template_file }
 
 outputs:
-  outputs:
+  arm:
     description: Azure deployment's outputs
     value: { get_attribute: [ deployment, outputs ] }
