--- a/src/main/resources/blueprints/terraform/blueprint.yaml
+++ b/src/main/resources/blueprints/terraform/blueprint.yaml
@@ -45,5 +45,6 @@ node_templates:
         type: cloudify.terraform.relationships.run_on_host
 
 outputs:
-  resources:
+  terraform:
+    description: Terraform outputs
     value: { get_attribute: [ terraform_module, resources ] }
