--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,15 @@
     <version>1.0.8-SNAPSHOT</version>
     <packaging>hpi</packaging>
     <properties>
-        <jenkins.version>2.222.4</jenkins.version>
+        <!--
+        Let's try to support the earliest LTS version recommended by Jenkins:
+        https://www.jenkins.io/doc/developer/plugin-development/choosing-jenkins-baseline/#currently-recommended-versions
+        -->
+        <jenkins.version>2.222.1</jenkins.version>
         <java.level>8</java.level>
         <slf4jVersion>1.7.30</slf4jVersion>
         <jersey.version>2.31</jersey.version>
-        <jackson.version>2.11.2</jackson.version>
+        <jackson.version>2.11.1</jackson.version>
         <credentials.version>2.3.7</credentials.version>
         <azure-credentials.version>4.0.2</azure-credentials.version>
         <azure-commons.version>1.0.4</azure-commons.version>
