--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>plugin</artifactId>
         <version>3.57</version>
-        <relativePath />
+<!--        <relativePath />-->
     </parent>
     <groupId>io.jenkins.plugins</groupId>
     <artifactId>cloudify</artifactId>
