--- a/pom.xml
+++ b/pom.xml
@@ -243,16 +243,16 @@
             </plugins>
         </pluginManagement>
     </build>
-<!--    <repositories>-->
-<!--        <repository>-->
-<!--            <id>repo.jenkins-ci.org</id>-->
-<!--            <url>https://repo.jenkins-ci.org/public/</url>-->
-<!--        </repository>-->
-<!--    </repositories>-->
-<!--    <pluginRepositories>-->
-<!--        <pluginRepository>-->
-<!--            <id>repo.jenkins-ci.org</id>-->
-<!--            <url>https://repo.jenkins-ci.org/public/</url>-->
-<!--        </pluginRepository>-->
-<!--    </pluginRepositories>-->
+    <repositories>
+        <repository>
+            <id>repo.jenkins-ci.org</id>
+            <url>https://repo.jenkins-ci.org/public/</url>
+        </repository>
+    </repositories>
+    <pluginRepositories>
+        <pluginRepository>
+            <id>repo.jenkins-ci.org</id>
+            <url>https://repo.jenkins-ci.org/public/</url>
+        </pluginRepository>
+    </pluginRepositories>
 </project>
